# sgg

./: CMakeLists.txt  README.md
cmake/: Installation.cmake  sgg-config.build.cmake.in  sgg-config.cmake.in
dest/include/sgg/: fonts.h  graphics.h
dest/share/cmake/sgg/: sgg-config.cmake  sgg-targets-release.cmake  sgg-targets-relwithdebinfo.cmake  sgg-targets.cmake
include/sgg/: GLbackend.h
src/: GLbackend.cpp  fonts.cpp  graphics.cpp
